--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,30 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:+'
+    }
+}
+
 group 'com.courses.tellus'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'war'
 
 sourceCompatibility = 1.8
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '4.5.1'
+//}
 
 repositories {
-    maven { url 'http://repo.spring.io/libs-milestone' }
-    maven { url 'http://repo.spring.io/libs-release' }
     mavenCentral()
     jcenter()
     mavenLocal()
 }
+
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 configurations {
     testCompile.extendsFrom compileOnly
@@ -25,32 +33,51 @@ configurations {
 dependencies {
     compile 'org.springframework:spring-context:+',
 
-            // JDBC
-            // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-//            'mysql:mysql-connector-java:+',
+            // AOP
+            'org.aspectj:aspectjrt:+',
+            'org.aspectj:aspectjweaver:+',
+            'aopalliance:aopalliance:+',
 
-            'com.h2database:h2:+',
+            // JDBC
             'org.springframework:spring-jdbc:+',
 
-            // Common
-            'org.apache.logging.log4j:log4j-core:+',
+            // ORM
+            'org.springframework:spring-orm:+',
+            'org.hibernate:hibernate-core:+',
+            'org.hibernate:hibernate-entitymanager:+',
+            'org.hibernate:hibernate-spatial:+',
+            'org.hibernate:hibernate-validator:+',
+            'org.hibernate:hibernate-java8:+',
+
+            'org.apache.logging.log4j:log4j-slf4j-impl:+',
+            'javax.xml.bind:jaxb-api:+',
             'io.vavr:vavr:+'
 
-    compileOnly 'org.apache.tomcat:tomcat-api:+',
-            'org.apache.tomcat:tomcat-jsp-api:+',
-            'org.projectlombok:lombok:+',
+    compileOnly 'org.projectlombok:lombok:+',
             'edu.washington.cs.types.checker:checker-framework:+'
 
-    testRuntime 'com.h2database:h2:+'
-
-    testCompile 'org.junit.jupiter:junit-jupiter-api:+',
+    testCompile 'org.junit.jupiter:junit-jupiter-params:+',
             'org.hamcrest:java-hamcrest:+',
+            'org.mockito:mockito-core:+',
             'org.springframework:spring-test:+'
+
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:+',
+            'com.h2database:h2:+'
+
+    // To avoid compiler warnings about @API annotations in JUnit code
+    testCompileOnly 'org.apiguardian:apiguardian-api:+'
 }
 
 //dependencies {
 //    testCompile group: 'junit', name: 'junit', version: '4.12'
 //}
+
+// type in terminal: gradle wrapper --gradle-version=4.5.1
+task wrapper(type: Wrapper) {
+    description = 'Generates gradlew[.bat] scripts'
+    gradleVersion = '4.5.1'
+    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
+}
 
 task testTwo() {
     doFirst {
