--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -12,6 +12,7 @@ checkstyle {
     sourceSets = [sourceSets.main]
     configFile = new File("${rootProject.projectDir}/buildSrc/checkstyle/checkstyle.xml")
     toolVersion = "7.8.2"
+    //checkstyleMain.source = "src/main/java/com/courses/tellus"
 }
 
 
@@ -49,7 +50,7 @@ test {
     jacoco {
         append = false
         destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
-        excludes = ['**/model/**']
+        excludes = ['**/model/**','**/roman/**']
     }
 }
 
@@ -61,7 +62,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*','**/roman/**'])
         })
     }
 }
