--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ apply plugin: 'java'
 allprojects {
     apply from: "${rootProject.projectDir}/buildSrc/analyze.gradle"
     dependencies shared.dataBaseDependencies
+    dependencies shared.unitTestDependencies
 }
 
 task wrapper(type: Wrapper) {
@@ -30,5 +31,5 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
 }
