--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,35 @@
 buildscript {
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:+'
-    }
-}
-
-group 'com.courses.tellus'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
     apply from: "buildSrc/repositories.gradle"
     repositories extRepositories
     apply from: "buildSrc/buildscript-dependencies.gradle"
     dependencies extDependencies
-
+}
 
 apply from: "buildSrc/dependencies.gradle"
-//all projects shared.globalRepositories
 subprojects shared.globalJavaConfig
-
+subprojects shared.globalRepositories
 apply plugin: 'java'
 
 allprojects {
     apply from: "${rootProject.projectDir}/buildSrc/analyze.gradle"
+    dependencies shared.dataBaseDependencies
+    dependencies shared.unitTestDependencies
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.5.1'
+}
+
+project("autosalon") {
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
 }
 
 repositories {
     mavenCentral()
-    jcenter()
-    mavenLocal()
-}
-
-apply plugin: 'org.junit.platform.gradle.plugin'
-
-configurations {
-    testCompile.extendsFrom compileOnly
 }
 
 dependencies {
-    compile 'org.springframework:spring-context:+',
-
-            // AOP
-            'org.aspectj:aspectjrt:+',
-            'org.aspectj:aspectjweaver:+',
-            'aopalliance:aopalliance:+',
-
-            // JDBC
-            'org.springframework:spring-jdbc:+',
-
-            // ORM
-            'org.springframework:spring-orm:+',
-            'org.hibernate:hibernate-core:+',
-            'org.hibernate:hibernate-entitymanager:+',
-            'org.hibernate:hibernate-spatial:+',
-            'org.hibernate:hibernate-validator:+',
-            'org.hibernate:hibernate-java8:+',
-
-            'org.apache.logging.log4j:log4j-slf4j-impl:+',
-            'javax.xml.bind:jaxb-api:+',
-            'io.vavr:vavr:+'
-
-    compileOnly 'org.projectlombok:lombok:+',
-            'edu.washington.cs.types.checker:checker-framework:+'
-
-    testCompile 'org.junit.jupiter:junit-jupiter-params:+',
-            'org.hamcrest:java-hamcrest:+',
-            'org.mockito:mockito-core:+',
-            'org.springframework:spring-test:+'
-
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:+',
-            'com.h2database:h2:+'
-
-    // To avoid compiler warnings about @API annotations in JUnit code
-    testCompileOnly 'org.apiguardian:apiguardian-api:+'
-}
-
-// type in terminal: gradle wrapper --gradle-version=4.5.1
-task wrapper(type: Wrapper) {
-    description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '4.5.1'
-    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
 }
