--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -1,48 +1,48 @@
 apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
+//apply plugin: 'findbugs'
 apply plugin: 'pmd'
 apply plugin: 'jdepend'
 apply plugin: "jacoco"
 apply plugin: 'com.palantir.jacoco-coverage'
-
 
 checkstyle {
     ignoreFailures = false
     configProperties.samedir = "${rootProject.projectDir}/buildSrc/checkstyle"
     sourceSets = [sourceSets.main]
     configFile = new File("${rootProject.projectDir}/buildSrc/checkstyle/checkstyle.xml")
-    toolVersion = "7.8.2"
+    //toolVersion = "8.8"
+    //checkstyleMain.source = "src/main/java/com/courses/tellus"
 }
 
 
 pmd {
-    toolVersion = "5.5.3"
+    toolVersion = "6.1.0"
     consoleOutput = true
     ruleSetFiles = rootProject.files('buildSrc/pmd/pmd_checks.xml')
 }
 
-findbugs {
-    toolVersion = "3.0.1"
-    sourceSets = [sourceSets.main]
-    effort = "max"
-    reportLevel = "high"
-    excludeFilter = file("${rootProject.projectDir}/buildSrc/findbugs/exclude.xml")
-}
+//findbugs {
+//    toolVersion = "3.0.1"
+//    sourceSets = [sourceSets.main]
+//    effort = "max"
+//    reportLevel = "high"
+//    excludeFilter = file("${rootProject.projectDir}/buildSrc/findbugs/exclude.xml")
+//}
 
 jdepend {
     toolVersion = "2.9.1"
     sourceSets = [sourceSets.main]
 }
 
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled false
-        html.enabled true
-    }
-}
+//tasks.withType(FindBugs) {
+//    reports {
+//        xml.enabled false
+//        html.enabled true
+//    }
+//}
 
 jacoco {
-    toolVersion = "0.7.9"
+    toolVersion = "0.8.0"
 }
 
 test {
@@ -61,7 +61,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*','**/roman/**'])
         })
     }
 }
