--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -60,22 +60,16 @@ class SharedDependencies {
     }
 
     Closure dataBaseDependencies = {
-        compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
-        compile group: 'com.h2database', name: 'h2', version: '1.4.196'
-        compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.4.1.Final'
-        compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+        compile group: 'com.h2database', name: 'h2', version: "1.4.196"
     }
 
     Closure unitTestDependencies = {
-        testCompile group: "junit", name: "junit", version: "4.12"
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
         testCompile group: "org.assertj", name: "assertj-core", version: "3.3.0"
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
         testCompile group: "org.mockito", name: "mockito-core", version: "2.7.22"
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-        testCompile group: 'com.jayway.restassured', name: 'spring-mock-mvc', version: '2.9.0'
-        testCompile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
-        testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '0.9.0'
         testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
     }
 
