--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,15 @@ project("autosalon") {
     }
 }
 
+project("education") {
+    dependencies {
+        // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+        compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
+}
+
 repositories {
     mavenCentral()
 }
