--- a/education/src/main/resources/db.properties
+++ b/education/src/main/resources/db.properties
@@ -1,9 +1,10 @@
 #MySQL DB Properties
 DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
+mysql.url=
+mysql.user=root
+mysql.password=admin
 
-DB_HOSTNAME=localhost
-DB_PORT=3306
-DB_NAME=education
-
-DB_USERNAME=root
-DB_PASSWORD=admin
+#H2 DB Properties
+h2.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+h2.user=root
+h2.password=admin
