--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ project("education") {
     dependencies {
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+        // https://mvnrepository.com/artifact/log4j/log4j
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
