added dependency and test module

--- a/buildSrc/buildscript-dependencies.gradle
+++ b/buildSrc/buildscript-dependencies.gradle
@@ -1,7 +1,9 @@
+ext.junit_plugin_version = '1.1.0'
 ext.extDependencies = {
     //classpath('org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE')
     classpath('com.palantir:jacoco-coverage:0.4.0')
     classpath("io.spring.gradle:dependency-management-plugin:0.6.1.RELEASE")
     classpath("net.saliman:gradle-properties-plugin:1.4.5")
     classpath("com.netflix.nebula:gradle-extra-configurations-plugin:3.1.0")
+    classpath("org.junit.platform:junit-platform-gradle-plugin:$junit_plugin_version")
 }
