--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,22 @@ project("autosalon") {
     }
 }
 
+project("autosalon-integration-test") {
+    apply plugin: 'org.junit.platform.gradle.plugin'
+    junitPlatform{
+        filters {
+            engines {
+                include 'junit-jupiter'
+            }
+        }
+        details 'tree'
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
+}
+
 repositories {
     mavenCentral()
 }
