--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ project("education") {
         compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
         // https://mvnrepository.com/artifact/log4j/log4j
         compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
+        //JUnit5
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 }
