--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ task wrapper(type: Wrapper) {
     gradleVersion = '4.5.1'
 }
 
+project("autosalon") {
+
+}
+
 project("education") {
     dependencies {
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
@@ -30,6 +34,7 @@ project("education") {
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
+}
 
     junitPlatform {
         filters {
@@ -229,4 +234,3 @@ project("education") {
                 hsqldb: "org.hsqldb:hsqldb:2.4.0"
         ]
     }
-}
