--- a/autosalon/build.gradle
+++ b/autosalon/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
