--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -64,7 +64,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*','**/roman/**','**/exception/**'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*','**/roman/**'])
         })
     }
 }
