--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ project("education") {
         //JUnit5
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        // https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito
+        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
+
     }
 }
 
