--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -63,7 +63,7 @@ jacocoTestReport {
     }
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/model/**', '**/*Main*.*','**/roman/**'])
+            fileTree(dir: it, exclude: ['**/model/**', '**/entity/**', '**/*Main*.*','**/roman/**'])
         })
     }
 }
