--- a/education/src/main/resources/db.properties
+++ b/education/src/main/resources/db.properties
@@ -5,6 +5,6 @@ mysql.user=root
 mysql.password=admin
 
 #H2 DB Properties
-h2.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+h2.url=jdbc:h2:mem:education;DB_CLOSE_DELAY=-1
 h2.user=root
 h2.password=admin
