--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
 
 ext {
