--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -19,6 +19,7 @@ checkstyle {
 pmd {
     toolVersion = "6.1.0"
     consoleOutput = true
+    sourceSets = [sourceSets.main]
     ruleSetFiles = rootProject.files('buildSrc/pmd/pmd_checks.xml')
 }
 
