--- a/airport/src/main/resources/config.properties
+++ b/airport/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-#H2 DB Properties
-h2.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-h2.user=root
-h2.password=admin
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+jdbc.user=ad
+jdbc.pass=ad
