--- a/build.gradle
+++ b/build.gradle
@@ -28,17 +28,15 @@ project("education") {
     dependencies {
         // https://mvnrepository.com/artifact/mysql/mysql-connector-java
         compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
-        // https://mvnrepository.com/artifact/log4j/log4j
-        compile group: 'log4j', name: 'log4j', version: '1.2.17'
-        //JUnit5
-        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
-        testCompile group: 'junit', name: 'junit', version: '4.12'
         // https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito
         testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
-
+        // https://mvnrepository.com/artifact/log4j/log4j
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
     }
 }
 
+project("education-test") {
+    apply plugin: 'org.junit.platform.gradle.plugin'
     junitPlatform {
         filters {
             engines {
@@ -47,6 +45,11 @@ project("education") {
         }
         details 'tree'
     }
+
+    dependencies {
+        compile project(':education')
+    }
+}
 
     dependencies {
         compile project(':autosalon')
