move gradle.build from autosalon module to roor gradle.build

--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,29 @@ task wrapper(type: Wrapper) {
 }
 
 project("autosalon") {
-
+    dependencies {
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+        compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    }
 }
 
+project("education") {
+    dependencies {
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
+        compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
+    }
+}
+
+project("education-test") {
+    dependencies {
+        compile project(':education')
+    }
+}
 
 dependencies {
+
     compile project(':autosalon')
 }
 
