--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,12 @@ project("autosalon") {
     }
 }
 
+project("autosalon-test") {
+    dependencies {
+        compile project(':autosalon')
+    }
+}
+
 project("education") {
     dependencies {
         compile group: 'log4j', name: 'log4j', version: '1.2.17'
@@ -49,12 +55,6 @@ project("education-test") {
         compile project(':education')
     }
 }
-
-dependencies {
-
-    compile project(':autosalon')
-}
-
 
 repositories {
     mavenCentral()
