--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -69,7 +69,7 @@ class SharedDependencies {
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
+//        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
     }
 
 }
