created  jdbcTemplateConfig  and remove old jdbc

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,16 @@ task wrapper(type: Wrapper) {
 }
 
 project("autosalon") {
+    dependencies {
+        def springVersion = '5.0.4.RELEASE'
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
+        compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
+        compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
+        compile group: 'org.springframework', name: 'spring-context', version: "$springVersion"
+        testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
 
+    }
 }
 
 project("education") {
