--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     compile project(':autosalon')
 }
 
+dependencies {
+    compile project(':airport')
+}
+
 project("airport") {
     dependencies {
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
