--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,15 @@ task wrapper(type: Wrapper) {
 
 project("autosalon") {
     dependencies {
+        springVersion = '5.0.4.RELEASE'
         compile group: 'log4j', name: 'log4j', version: '1.2.17'
         compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
         testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
-        compile group: 'org.springframework', name: 'spring-core', version: '5.0.4.RELEASE'
-        compile group: 'org.springframework', name: 'spring-jdbc', version: '5.0.4.RELEASE'
-        compile group: 'org.springframework', name: 'spring-context', version: '5.0.4.RELEASE'
-        testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.4.RELEASE'
-        compile group: 'org.springframework', name: 'spring-beans', version: '5.0.4.RELEASE'
+        compile group: 'org.springframework', name: 'spring-core', version: '$springVersion'
+        compile group: 'org.springframework', name: 'spring-jdbc', version: '$springVersion'
+        compile group: 'org.springframework', name: 'spring-context', version: '$springVersion'
+        testCompile group: 'org.springframework', name: 'spring-test', version: '$springVersion'
+        compile group: 'org.springframework', name: 'spring-beans', version: '$springVersion'
 
     }
 }
