--- a/build.gradle
+++ b/build.gradle
@@ -51,16 +51,18 @@ dependencies {
     compile project(':autosalon')
 }
 
-dependencies {
-    compile project(':airport')
-}
-
 project("airport") {
     dependencies {
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
         compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
         compile group: 'log4j', name: 'log4j', version: '1.2.17'
         testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
+    }
+}
+
+project("airport-test") {
+    dependencies {
+        compile project(':airport')
     }
 }
 
