--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -8,6 +8,7 @@ extensions.create("shared", SharedDependencies)
 class SharedDependencies {
 
     def springBootVersion = "1.5.6.RELEASE"
+    def springVersion = "5.0.4.RELEASE"
 
     Closure globalJavaConfig = {
         apply plugin: 'java'
@@ -36,20 +37,10 @@ class SharedDependencies {
     Closure applicationDependencies = {
         compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
-        compile group: "org.springframework.boot", name: "spring-boot-starter-web", version: springBootVersion
-        compile group: "org.springframework.boot", name: "spring-boot-starter-thymeleaf", version: springBootVersion
-//        compile group: "org.springframework.boot", name: "spring-boot-starter-tomcat", version: springBootVersion
-//        compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: springBootVersion
-        compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion
-        compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: springBootVersion
-        compile group: 'org.springframework.session', name: 'spring-session-jdbc', version: '1.3.1.RELEASE'
-        compile group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
-        compile group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
-        compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7-1'
-        compile group: 'org.webjars', name: 'jquery', version: '3.2.1'
-//        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        compile group: 'org.springframework', name: 'spring-core', version: "$springVersion"
+        compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
 
-//        compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
     }
 
     Closure securityDependencies = {
@@ -69,7 +60,8 @@ class SharedDependencies {
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-//        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
+        testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
+
     }
 
 }
