--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ allprojects {
     apply from: "${rootProject.projectDir}/buildSrc/analyze.gradle"
     dependencies shared.dataBaseDependencies
     dependencies shared.unitTestDependencies
+    dependencies shared.applicationDependencies
     junitPlatform {
         filters {
             engines {
@@ -29,24 +30,16 @@ task wrapper(type: Wrapper) {
 }
 
 project("autosalon") {
-    dependencies {
-        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
-        compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
-        compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    }
 }
 
 project("autosalon-test") {
     dependencies {
         compile project(':autosalon')
     }
-
 }
 
 project("education") {
     dependencies {
-        compile group: 'log4j', name: 'log4j', version: '1.2.17'
-        compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
         testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
     }
 }
@@ -57,23 +50,13 @@ project("education-test") {
     }
 }
 
-dependencies {
-
-    compile project(':autosalon')
-}
-
-
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
-}
-
 ext {
     //spring libs
-    springVersion = '5.0.2.RELEASE'
+    springVersion = '5.0.4.RELEASE'
     bootVersion = '2.0.0.M3'
     springDataVersion = '2.0.2.RELEASE'
     springAmqpVersion = '2.0.0.M4'
