--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -2,7 +2,6 @@ apply plugin: "io.spring.dependency-management"
 apply plugin: "net.saliman.properties"
 apply plugin: 'nebula.optional-base'
 
-
 extensions.create("shared", SharedDependencies)
 
 class SharedDependencies {
@@ -35,12 +34,9 @@ class SharedDependencies {
     }
 
     Closure applicationDependencies = {
-        compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
-        compile group: 'org.springframework', name: 'spring-core', version: "$springVersion"
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
+        compile group: 'org.springframework', name: 'spring-context', version: "$springVersion"
         compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
-
-
     }
 
     Closure securityDependencies = {
@@ -52,6 +48,8 @@ class SharedDependencies {
 
     Closure dataBaseDependencies = {
         compile group: 'com.h2database', name: 'h2', version: "1.4.196"
+        compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+        compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
     }
 
     Closure unitTestDependencies = {
@@ -61,7 +59,5 @@ class SharedDependencies {
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
         testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
         testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
-
     }
-
 }
