--- a/education/src/main/resources/properties/db.properties
+++ b/education/src/main/resources/properties/db.properties
@@ -4,7 +4,12 @@ mysql.url=
 mysql.user=root
 mysql.password=admin
 
-#H2 DB Properties
+#h2 DB Properties
 h2.url=jdbc:h2:mem:education;DB_CLOSE_DELAY=-1
 h2.user=root
 h2.password=admin
+
+#PostgreSQL DB Properties
+pg.url=jdbc:postgresql://localhost:5432/edu
+pg.user=postgres
+pg.password=admin
