--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ project("airport") {
 
 project("education") {
     dependencies {
+        compile group: 'javax.servlet.jsp.jstl', name: 'jstl', version: '1.2'
+        provided group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
     }
 }
