--- a/airport/src/main/resources/config.properties
+++ b/airport/src/main/resources/config.properties
@@ -1,4 +1,11 @@
+#h2 db properties
 jdbc.driverClassName=org.h2.Driver
 jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 jdbc.user=ad
 jdbc.pass=ad
+
+#mySql db properties
+jdbc.url.mysql=jdbc:mysql://localhost:3306/airport
+jdbc.user.mysql=root
+jdbc.pass.mysql=admin
+
