--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -12,6 +12,7 @@ class SharedDependencies {
     Closure globalJavaConfig = {
         apply plugin: 'java'
         apply plugin: 'idea'
+        apply plugin: 'war'
         sourceCompatibility = 1.9
         targetCompatibility = 1.9
     }
