--- a/autosalon/src/main/resources/config.properties
+++ b/autosalon/src/main/resources/config.properties
@@ -3,6 +3,6 @@ jdbc.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 jdbc.user=sa
 jdbc.pass=sa
 
-jdbc.url.mysql=jdbc:mysql://localhost:3306/autosalon
+jdbc.url.mysql=jdbc:mysql://localhost:3306/Autosalon
 jdbc.user.mysql=root
 jdbc.pass.mysql=admin
