replace used method getPathInfo() on getRequestURI()

--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ task wrapper(type: Wrapper) {
 
 project("autosalon") {
     dependencies{
-        providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
-        providedCompile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
+        compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
+        compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'jstl', name: 'jstl', version: '1.2'
 
         compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.9.v20180320'
