change path for h2 DB in property file, added subjects in index.html, deleted web.xml

--- a/education/src/main/resources/properties/db.properties
+++ b/education/src/main/resources/properties/db.properties
@@ -1,5 +1,5 @@
 #h2 DB Properties
-h2.url=jdbc:h2:file:/home/stas/Documents/IdeaProjects/Hillel/tellus/out;AUTO_SERVER=TRUE;
+h2.url=jdbc:h2:mem:education;DB_CLOSE_DELAY=-1;
 h2.user=sa
 h2.password=sa
 
