--- a/buildSrc/analyze.gradle
+++ b/buildSrc/analyze.gradle
@@ -65,7 +65,7 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it, exclude: ['**/model/**', '**/entity/**', '**/connection/**', '**/config/**',
-                                        '**/exception/**', '**/*Main*/**', '**/roman/**'])
+                                        '**/*Main*/**', '**/roman/**'])
         })
     }
 }
