--- a/buildSrc/dependencies.gradle
+++ b/buildSrc/dependencies.gradle
@@ -11,7 +11,6 @@ class SharedDependencies {
 
     Closure globalJavaConfig = {
         apply plugin: 'java'
-        apply plugin: 'war'
         apply plugin: 'idea'
         sourceCompatibility = 1.9
         targetCompatibility = 1.9
@@ -58,7 +57,7 @@ class SharedDependencies {
         testCompile group: "org.assertj", name: "assertj-core", version: "3.3.0"
         testCompile group: "org.hamcrest", name: "hamcrest-core", version: "1.3"
         testCompile group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
-        testCompile group: 'org.mockito', name: 'mockito-inline', version: '2.16.0'
+        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
         testCompile group: 'org.springframework', name: 'spring-test', version: "$springVersion"
     }
 }
