refactoring path autoController

--- a/education/src/main/resources/properties/db.properties
+++ b/education/src/main/resources/properties/db.properties
@@ -1,15 +1,15 @@
-#MySQL DB Properties
-DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
-mysql.url=
-mysql.user=root
-mysql.password=admin
-
 #h2 DB Properties
-h2.url=jdbc:h2:mem:education;DB_CLOSE_DELAY=-1
-h2.user=root
-h2.password=admin
+h2.url=jdbc:h2:mem:education;DB_CLOSE_DELAY=-1;
+h2.user=sa
+h2.password=sa
 
 #PostgreSQL DB Properties
 pg.url=jdbc:postgresql://localhost:5432/edu
 pg.user=postgres
 pg.password=admin
+
+#MySQL DB Properties
+#DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
+#mysql.url=
+#mysql.user=root
+#mysql.password=admin
