--- a/build.gradle
+++ b/build.gradle
@@ -59,16 +59,21 @@ project("airport-test") {
 
 project("airport") {
     dependencies {
-        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
-        compile group: 'log4j', name: 'log4j', version: '1.2.17'
-        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
     }
 }
 
 project("education") {
-    dependencies {
-        testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
 
+    apply plugin: 'war'
+
+    dependencies {
+        compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
+        compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+        compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
+    }
+
+    war {
+        archiveName = 'education.war'
     }
 }
 
