repo rest config, repo rest and repo rest service added

--- a/education/src/main/resources/properties/db.properties
+++ b/education/src/main/resources/properties/db.properties
@@ -13,3 +13,9 @@ pg.password=admin
 #mysql.url=
 #mysql.user=root
 #mysql.password=admin
+
+#Spring Data configuration
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.import_files=database/h2/init_h2_values.sql
+hibernate.format_sql=true
