--- a/build.gradle
+++ b/build.gradle
@@ -67,13 +67,17 @@ project("education") {
     apply plugin: 'war'
 
     dependencies {
-        compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.11.Final'
-        compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+        compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.5'
 
+        compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.11.Final'
+        compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+        compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.0.5.RELEASE'
         compile group: 'org.springframework', name: 'spring-webmvc', version: '5.0.4.RELEASE'
+
         compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.1'
         compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
         compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+        compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     }
 
     war {
